# vesna_experiment

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  camera_control.py  pyproject.toml  requirements.txt
.github/workflows/: on-pull-request.yml  on-push.yml
camera_control/: __main__.py  test.py
src/camera_control/: __main__.py
tests/: test_camera.py  test_cli_args.py  test_file_access.py  test_remote_access.py  test_runs.py
